Updated the Experience section to prevent the company name from overflowing

--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -74,9 +74,7 @@
   margin: 0;
   color: $lightBackground1;
   font-size: 25px;
-  text-align: center;
   font-weight: 700;
-  text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
